Basic layout with dummy data

--- a/src/main/ui/app/template.html
+++ b/src/main/ui/app/template.html
@@ -4,10 +4,12 @@
   <meta charset="utf-8">
   <title>React App</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/superhero/bootstrap.min.css">
 </head>
 <body>
-  <div class="container">
-    <div id="app">Loading...</div>
+  <div class="container-fluid full-height">
+    <div id="app" class="full-height">Loading...</div>
   </div>
 </body>
 </html>
