--- a/src/main/ui/app/template.html
+++ b/src/main/ui/app/template.html
@@ -12,4 +12,9 @@
     <div id="app" class="full-height">Loading...</div>
   </div>
 </body>
+<script
+  src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+  integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
+  crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </html>
